fix table-layout/text-overflow
On a chromebook the screen is too small (!?) to fit everything. That's not right.
But anyways, when it does overflow, the columns get bigger. Which I prevent here

--- a/src/Elems/MainElems/Sudoku.css
+++ b/src/Elems/MainElems/Sudoku.css
@@ -1,4 +1,9 @@
 
+/*
+   References:
+   [1]: https://stackoverflow.com/questions/4457506
+*/
+
 table.Sudoku {
    border: 3px solid white;
    border-collapse: collapse;
@@ -6,6 +11,8 @@ table.Sudoku {
    text-align: center;
    font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
       monospace;
+
+   table-layout: fixed; /* [ref 1] */
 }
 
 tr.Row {
@@ -20,6 +27,8 @@ td.Cell {
    width: 10%;
    border: 1.5px solid white;
    font-size: 200%;
+   
+   text-overflow: hidden; /* [ref 1]* */
 }
 
 td.Cell[error="true"] {
@@ -37,10 +46,11 @@ td.Cell:nth-child(3n) {
 table.Candidates {
    width: 100%;
    height: 100%;
+   table-layout: fixed; /* [ref 1] */
 }
 
 table.Candidates > tbody > tr {
-   height: 33%;
+   height: 33.3%;
    font-size: 45%; /*
       The font-size property is here instead of td.Candidate since its more specific
       = half of 90%
@@ -51,5 +61,6 @@ td.Candidate {
    width: 33.3%;
    padding: 0;
    line-height: 0;
+   text-overflow: hidden; /* [ref 1]* */
 }
 
